chore: fixed extra space problem and etc

--- a/src/app/modules/main/components/places/components/place-card/place-card.component.scss
+++ b/src/app/modules/main/components/places/components/place-card/place-card.component.scss
@@ -49,7 +49,7 @@
         display: flex;
 
         .sub-type {
-          padding-right: 8px;
+          padding-right: 4px;
 
           &:not(:first-child) {
             &:before {
