--- a/src/app/modules/main/components/trails/add-steps/add-steps.component.scss
+++ b/src/app/modules/main/components/trails/add-steps/add-steps.component.scss
@@ -19,6 +19,21 @@
     }
   }
 
+  ion-badge {
+    border-radius: 100%;
+    --padding-top: 4px;
+    --padding-end: 4px;
+    --padding-bottom: 4px;
+    --padding-start: 4px;
+
+    position: absolute;
+    top: 0px;
+    right: 0px;
+
+    height: 10px;
+    width: 10px;
+  }
+
   .add-button {
     --padding-start: 12px;
     --padding-end: 12px;
